--- a/result.html
+++ b/result.html
@@ -72,7 +72,7 @@
                 
                     <div class="period-pill">
                         <div class="period-mask">
-                            <p class="monthly-label">In the last 30 days</p>
+                            <p class="monthly-label">Loading...</p>
                         </div>
                     </div>
                 
